--- a/scanner/index.html
+++ b/scanner/index.html
@@ -39,6 +39,10 @@ Dapong QR Code scanner
 </td>
 </tr>
 
+			<div style="display: table-cell; padding:3px;">
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Kamera</div>
+            </div>
+  
 <tr><td colspan="3" align="center">
 <div id="result"></div>
 </td></tr>
