--- a/scanner/index.html
+++ b/scanner/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="id" >
 <head>
   <meta charset="UTF-8">
   <title>Dapong - QRcodeScanner</title>
@@ -38,18 +38,20 @@ Dapong QR Code scanner
 </table>
 </td>
 </tr>
-  
-<tr><td colspan="3" align="center">
+<tr>
+<td colspan="3" align="center">
 <div id="result"></div>
-</td></tr>
+</td>
+</tr>
 </table>
 
-
-	    <div style="display: table-cell; padding:3px;">
-              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Kamera</div>
-            </div>
 <!-- webqr_2016 -->
 
+
+			<div style="display:block; padding:3px;margin-top: 150px;">
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Kamera</div>
+            </div>
+			
 </div>&nbsp;
 <div id="footer">
 
