--- a/scanner/index.html
+++ b/scanner/index.html
@@ -49,7 +49,7 @@ Dapong QR Code scanner
 
 
 			<div style="display:block; padding:3px;margin-top: 150px;">
-              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Kamera</div>
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Kamera</div>
             </div>
 			
 </div>&nbsp;
