--- a/scanner/index.html
+++ b/scanner/index.html
@@ -47,10 +47,17 @@ Dapong QR Code scanner
 
 <!-- webqr_2016 -->
 
-
-			<div style="display:block; padding:3px;margin-top: 150px;">
-              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Kamera</div>
+        <div style="display: table;">
+          <div style="display: table-row;">
+            <div style="display: table-cell; padding:3px;">
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Camera</div>
             </div>
+            <div style="display: table-cell; padding:3px;">
+              <!-- <div class="btn" onclick="document.location = 'googlechrome://navigate?url=https://laksa19.github.io/myqr/';"></div> -->
+              <a class="btn" href="intent://daffadev.my.id/scanner#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Buka Di Chrome</a>
+            </div>
+          </div>
+
 			
 </div>&nbsp;
 <div id="footer">
