--- a/scanQR/index.html
+++ b/scanQR/index.html
@@ -52,7 +52,7 @@ Dapong QR Code scanner
         <div style="display: table;margin: auto;margin-top: 100px;">
           <div style="display: table-row;">
             <div style="display: table-cell; padding:3px;">
-              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Camera</div>
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Camera</div>
             </div>
             <div style="display: table-cell; padding:3px;">
               <a class="btn" href="intent://daffadev-inc.github.io/scanQRr#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Buka Di Chrome</a>
