--- a/scanQR/index.html
+++ b/scanQR/index.html
@@ -55,7 +55,7 @@ Dapong QR Code scanner
               <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Putar Camera</div>
             </div>
             <div style="display: table-cell; padding:3px;">
-              <a class="btn" href="intent://daffadev-inc.github.io/scanQR#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Buka Di Chrome</a>
+              <a class="btn" href="intent://daffadev-inc.github.io/myQR#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Buka Di Chrome</a>
             </div>
           </div>
 <div id="footer">
