--- a/diskusi/bebas.html
+++ b/diskusi/bebas.html
@@ -6,12 +6,12 @@
     /*
     var disqus_config = function () {
     this.page.url = https://daffadev.my.id;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.identifier = https-plus62store-000webhostapp-com; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://EXAMPLE.disqus.com/embed.js';
+    s.src = 'https://https-plus62store-000webhostapp-com.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
